...
              children: [
                CircularProgressIndicator(
                  key: Key('loadingIndicator'), // 添加 Key 用于测试
                ),
                SizedBox(height: 20),
                Text(
                  'Loading...',
                  key: Key('loadingText'), // 添加 Key 用于测试
                  style: TextStyle(fontSize: 20, color: Colors.white),
                ),
              ],
            ),
          ),
...
